# MidnightSign

./: CMakeLists.txt  readme.md
src/: md-keygen.cpp  md-sign.cpp  md-verify.cpp  pk-arr.cpp
